Fix jquery path

--- a/www-source/jekyll-src/_layouts/layout.html
+++ b/www-source/jekyll-src/_layouts/layout.html
@@ -6,7 +6,7 @@ body {
     color: #888;
 }
 </style>
-<script src="js/jquery-2.0.3.min.js"></script>
+<script src="js/jquery.min.js"></script>
 <script src="js/straw-android.js"></script>
 <script src="js/straw-android-http-plugin.js"></script>
 <script src="js/whatsmyip.js"></script>
