--- a/www-source/jekyll-src/_layouts/layout.html
+++ b/www-source/jekyll-src/_layouts/layout.html
@@ -1,16 +1,16 @@
+<!doctype html>
 <html>
-<head><title>{{ page.title }}</title></head>
-<style>
-body {
-    background-color: #fff;
-    color: #888;
-}
-</style>
-<script src="js/jquery.min.js"></script>
-<script src="js/straw-android.js"></script>
-<script src="js/straw-android-http-plugin.js"></script>
-<script src="js/whatsmyip.js"></script>
-<body>
-  {{ content }}
-</body>
+  <head>
+    <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+  </head>
+  <body>
+      {{ content }}
+    <script src="js/jquery.min.js"></script>
+    <script src="js/straw-android.js"></script>
+    <script src="js/straw-android-http-plugin.js"></script>
+    <script src="js/whatsmyip.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
