--- a/www-source/jekyll-src/_layouts/layout.html
+++ b/www-source/jekyll-src/_layouts/layout.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
+    <link rel="stylesheet" href="css/custom.css" />
   </head>
   <body>
-      {{ content }}
+    {{ content }}
     <script src="js/jquery.min.js"></script>
     <script src="js/straw-android.js"></script>
     <script src="js/straw-android-http-plugin.js"></script>
