Add script tags

--- a/www-source/jekyll-src/_layouts/layout.html
+++ b/www-source/jekyll-src/_layouts/layout.html
@@ -11,6 +11,8 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/straw-android.js"></script>
     <script src="js/straw-android-http-plugin.js"></script>
+    <script src="js/domain/iprecord.js"></script>
+    <script src="js/domain/iprecordfactory.js"></script>
     <script src="js/whatsmyip.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
