--- a/src/main/middleman/layouts/layout.erb
+++ b/src/main/middleman/layouts/layout.erb
@@ -15,6 +15,19 @@
   </head>
   
   <body class="<%= page_classes %>">
+
+    <div class="navbar navbar-inverse" role="navigation">
+
+      <span class="navbar-brand disabled" style="color: #e5e5e5; float: none; display: inline-block;">
+
+        My <img src="images/ip.png" width="36" height="36"/> Address
+
+      </span>
+
+    </div>
+
     <%= yield %>
+
   </body>
+
 </html>
