--- a/src/main/middleman/stylesheets/all.css
+++ b/src/main/middleman/stylesheets/all.css
@@ -4,9 +4,14 @@
 @charset "utf-8";
 
 
-body {
-  background: #d4d4d4 url("../images/background.png");
+body, html {
+  background: #e4e4e4;
   text-align: center;
-  font-family: sans-serif; }
+}
 
 
+footer {
+    margin-top: 50px;
+    border-top: solid 1px #bbb;
+    padding-top: 30px;
+}
