--- a/src/main/middleman/_loading.liquid
+++ b/src/main/middleman/_loading.liquid
@@ -1,8 +1,8 @@
 
-<div class="input-group">
+<div class="input-group input-group">
 
-  <span class="input-group-addon"><i class="fa fa-refresh fa-spin"></i></span>
+  <span class="input-group-addon" id="ip-reload-button"><i id="ip-loading" class="fa fa-refresh fa-spin"></i></span>
 
-  <input type="text" class="form-control t-attr" placeholder="loading..." />
+  <input id="ip-input" onclick="this.select()" type="text" class="form-control t-attr" placeholder="loading..." />
 
 </div>
