--- a/src/main/middleman/_loading.liquid
+++ b/src/main/middleman/_loading.liquid
@@ -3,6 +3,6 @@
 
   <span class="input-group-addon" id="ip-reload-button"><i id="ip-loading" class="fa fa-refresh fa-spin"></i></span>
 
-  <input id="ip-input" onclick="this.select()" type="text" class="form-control t-attr" placeholder="loading..." />
+  <input id="ip-input" onclick="this.select()" type="text" class="form-control t-attr" placeholder="t:common.loading" />
 
 </div>
