--- a/src/main/middleman/index.html.liquid
+++ b/src/main/middleman/index.html.liquid
@@ -8,6 +8,15 @@ title: Welcome to Middleman
 
 </div>
 
+<t>st_id</t>
+
+
+<input a="1" b="2" class="t-attr" placeholder="t:abc" />
+
+<br />
+
+<span class="t-text">st_id</span>
+
 {% include 'footer' %}
 
 <script>
