Localize some strings

--- a/src/main/middleman/_footer.liquid
+++ b/src/main/middleman/_footer.liquid
@@ -3,9 +3,9 @@
 
   <div class="container">
 
-    <p>Created by <a href="http://app.kt3k.com/">app.kt3k.com</a></p>
+    <p>Created by <a href="javascript:straw.browser.open('http://app.kt3k.com/')">app.kt3k.com</a></p>
 
-    <p>version v1.0.0</p>
+    <p>version v1.0.0 - <a href="javascript:straw.browser.open('http://google.com/')"><t>common.review</t></></p>
 
   </div>
 
