Comment out invisible untranslated

--- a/src/main/middleman/stylesheets/all.css
+++ b/src/main/middleman/stylesheets/all.css
@@ -11,11 +11,13 @@ body, html {
 
 
 /* hide untranslated elems */
+/** /
 t, .t-text, .t-attr {
 
     visibility: hidden;
 
 }
+//*/
 
 
 footer {
