Add develop config

--- a/src/main/middleman/layouts/layout.erb
+++ b/src/main/middleman/layouts/layout.erb
@@ -14,6 +14,8 @@
 
     <script src="./javascripts/all.js"></script>
 
+    <script>window.config = <%= settings.config.to_json %></script>
+
   </head>
   
   <body class="<%= page_classes %>">
