Add ip loading indicator class

--- a/src/main/middleman/_loading.liquid
+++ b/src/main/middleman/_loading.liquid
@@ -1,7 +1,7 @@
 
 <div class="input-group input-group">
 
-  <span class="input-group-addon ip-reload-button"><i id="ip-loading" class="fa fa-refresh fa-spin"></i></span>
+  <span class="input-group-addon ip-reload-button ip-indicator"><i id="ip-loading" class="fa fa-refresh fa-spin"></i></span>
 
   <input id="ip-input" onclick="this.select()" type="text" class="form-control t-attr" placeholder="t:common.loading" />
 
