Add placeholder ip records page

--- a/src/main/middleman/_footer.liquid
+++ b/src/main/middleman/_footer.liquid
@@ -5,7 +5,13 @@
 
     <p>Created by <a href="javascript:straw.browser.open('http://app.kt3k.com/')">app.kt3k.com</a></p>
 
-    <p>version v1.0.0 - <a href="javascript:straw.browser.open('http://google.com/')"><t>common.review</t></></p>
+    <p>
+
+      version v1.0.0 -
+
+      <a href="javascript:straw.browser.open('http://google.com/')"><t>common.googleplay</t></>
+
+    </p>
 
   </div>
 
