--- a/src/main/middleman/index.html.liquid
+++ b/src/main/middleman/index.html.liquid
@@ -6,9 +6,9 @@ title: Welcome to Middleman
 
   {% include 'loading' %}
 
-  <div id="ip-load-done" style="margin-top: 30px;">
+  <div class="ip-load-done" style="margin-top: 30px; display: none;">
 
-    <button type="button" class="btn btn-info"><t>page.history</t></button>
+    <button type="button" class="btn btn-info link-to-history"><t>page.history</t></button>
 
     <button type="button" class="btn btn-default ip-reload-button"><t>common.reload</t></button>
 
