--- a/src/main/middleman/index.html.liquid
+++ b/src/main/middleman/index.html.liquid
@@ -8,7 +8,7 @@ title: Welcome to Middleman
 
   <div class="ip-load-done" style="margin-top: 30px; display: none;">
 
-    <button type="button" class="btn btn-info link-to-history"><t>page.history</t></button>
+    <button type="button" class="btn btn-info link-to-records"><t>page.history</t></button>
 
     <button type="button" class="btn btn-default ip-reload-button"><t>common.reload</t></button>
 
