Fix header & footer centering

--- a/src/main/middleman/layouts/layout.erb
+++ b/src/main/middleman/layouts/layout.erb
@@ -20,7 +20,7 @@
   
   <body class="<%= page_classes %>">
 
-    <div class="navbar navbar-inverse" role="navigation">
+    <div class="navbar navbar-inverse" role="navigation" style="text-align: center;">
 
       <span class="navbar-brand disabled" style="color: #e5e5e5; font-weight: bold; float: none; display: inline-block;">
 
