--- a/src/main/middleman/layouts/layout.erb
+++ b/src/main/middleman/layouts/layout.erb
@@ -10,6 +10,7 @@
     <title><%= current_page.data.title || "App" %></title>
     
     <link rel="stylesheet" href="./fa/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="./flag/flag.css" />
     <link rel="stylesheet" href="./stylesheets/all.css" />
 
     <script src="./javascripts/all.js"></script>
