--- a/src/main/middleman/_loading.liquid
+++ b/src/main/middleman/_loading.liquid
@@ -5,4 +5,10 @@
 
   <input id="ip-input" onclick="this.select()" type="text" class="form-control t-attr" placeholder="t:common.loading" />
 
+  <span class="input-group-addon">
+
+      <img class="flag country-icon" />
+
+  </span>
+
 </div>
