--- a/src/main/middleman/layouts/layout.erb
+++ b/src/main/middleman/layouts/layout.erb
@@ -25,7 +25,7 @@
 
       <span class="navbar-brand disabled" style="color: #e5e5e5; font-weight: bold; float: none; display: inline-block;">
 
-        <t>common.brand.my</t> <img src="images/ip.png" width="36" height="36"/> <t>common.brand.address</t>
+        My <img src="images/ip.png" width="36" height="36"/> Address
 
       </span>
 
