--- a/src/main/middleman/index.html.liquid
+++ b/src/main/middleman/index.html.liquid
@@ -10,9 +10,17 @@ title: My IP Address
 
   <div class="ip-load-done" style="margin-top: 30px; display: none;">
 
-    <button type="button" class="btn btn-info link-to-records"><i class="fa fa-calendar"></i> <t>page.history</t></button>
+    <button type="button" class="btn btn-info link-to-records">
 
-    <button type="button" class="btn btn-default ip-reload-button"><i class="fa fa-refresh"></i> <t>common.reload</t></button>
+      <i class="fa fa-calendar"></i> <t>page.history</t>
+
+    </button>
+
+    <button type="button" class="btn btn-default ip-reload-button">
+
+      <i class="fa fa-refresh"></i> <t>common.reload</t>
+
+    </button>
 
   </div>
 
@@ -22,6 +30,6 @@ title: My IP Address
 
 <script>
 
-  $(window.index.main);
+  $(window.page.index.main);
 
 </script>
