Add .version and unify version number for the app (v0.1.0)

--- a/src/main/middleman/_footer.liquid
+++ b/src/main/middleman/_footer.liquid
@@ -3,13 +3,21 @@
 
   <div class="container">
 
-    <p>Created by <a href="javascript:straw.browser.open('http://app.kt3k.com/')">app.kt3k.com</a></p>
+    <p>
+
+      Created by
+
+      <a href="javascript:straw.browser.open('http://app.kt3k.com/')"><i class="fa fa-globe"></i> app.kt3k.com</a>
+      
+    </p>
 
     <p>
 
-      version v1.0.0 -
+      version v0.1.0 -
 
-      <a href="javascript:straw.browser.open('http://google.com/')"><t>common.googleplay</t></>
+      <a href="javascript:straw.browser.open('http://google.com/')">
+        <i class="fa fa-play"></i> <t>common.googleplay</t>
+      </a>
 
     </p>
 
