Implement the transition to the market

--- a/src/main/middleman/_footer.liquid
+++ b/src/main/middleman/_footer.liquid
@@ -15,7 +15,7 @@
 
       version v0.1.1 -
 
-      <a href="javascript:straw.browser.open('http://google.com/')">
+      <a href="javascript:window.common.openMarketLink();">
         <i class="fa fa-play"></i> <t>common.googleplay</t>
       </a>
 
