--- a/src/main/middleman/index.html.liquid
+++ b/src/main/middleman/index.html.liquid
@@ -76,9 +76,7 @@ title: My IP Address
 
             <i class="fa fa-thumbs-up"></i>
 
-            <t>common.dialog.ok</t>
-
-            <i class="fa fa-smile-o"></i>
+            <t>common.dialog.yes</t>
 
           </button>
 
