Change main control hiding

--- a/src/main/middleman/index.html.liquid
+++ b/src/main/middleman/index.html.liquid
@@ -8,15 +8,15 @@ title: My IP Address
 
   {% include 'loading' %}
 
-  <div class="ip-load-done" style="margin-top: 30px; display: none;">
+  <div class="ip-load-done" style="margin-top: 30px; ">
 
-    <button type="button" class="btn btn-info link-to-records">
+    <button type="button" class="btn btn-info link-to-records main-control disabled">
 
       <i class="fa fa-calendar"></i> <t>page.history</t>
 
     </button>
 
-    <button type="button" class="btn btn-default ip-reload-button">
+    <button type="button" class="btn btn-default ip-reload-button main-control disabled">
 
       <i class="fa fa-refresh"></i> <t>common.reload</t>
 
