--- a/src/main/middleman/records.html.liquid
+++ b/src/main/middleman/records.html.liquid
@@ -4,7 +4,7 @@ title: My IP Address History
 
 <div class="container">
 
-<h1>IP Address History</h1>
+<h2 class="page-title">IP Address History</h2>
 
   <div class="debug"></div>
 
