--- a/src/main/middleman/stylesheets/all.css
+++ b/src/main/middleman/stylesheets/all.css
@@ -17,6 +17,15 @@ t, .t-text, .t-attr {
 }
 
 
+.no-wrap {
+    white-space: nowrap;
+}
+
+.page-title {
+    text-align: center;
+}
+
+
 #footer {
     margin-top: 50px;
     border-top: solid 1px #bbb;
